--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     e.preventDefault();
     const name = document.getElementById('rsvpName').value;
     const status = document.getElementById('rsvpStatus').value;
-    const phone = '628XXXXXXXXXX'; // GANTI NOMOR WA KAMU
+    const phone = '6288983214642'; // GANTI NOMOR WA KAMU
     const msg = `Assalamu’alaikum, saya ${name}. Konfirmasi kehadiran: ${status} pada pernikahan Anisa & Doni.`;
 
     // Kirim ke WhatsApp
